# supervised_learning

./: .gitignore  Untitled1.ipynb  approx_accurayc.ipynb  cifar_data.py  download_imagenet-2.ipynb  eval.py  gather.py  lda.py  models.py  pyproject.toml  resnet.py  train.py  utils.py
wandb/: latest-run
wandb/run-20250418_153949-h56rnidc/: run-h56rnidc.wandb
wandb/run-20250418_154049-ps7vivmm/: run-ps7vivmm.wandb
wandb/run-20250418_154434-bij1gvs3/: run-bij1gvs3.wandb
wandb/run-20250418_154817-vgl5ppyq/: run-vgl5ppyq.wandb
wandb/run-20250418_165857-98amzoq0/: run-98amzoq0.wandb
wandb/run-20250418_180659-hw24u3n9/: run-hw24u3n9.wandb
wandb/run-20250418_181327-nh0isnbf/: run-nh0isnbf.wandb
wandb/run-20250418_182533-otyzutz2/: run-otyzutz2.wandb
wandb/run-20250418_200740-qcpufaay/: run-qcpufaay.wandb
wandb/run-20250419_183310-2zn6uex9/: run-2zn6uex9.wandb
wandb/run-20250421_185523-spzusmhu/: run-spzusmhu.wandb
wandb/run-20250421_195723-74qrobr5/: run-74qrobr5.wandb
wandb/run-20250421_195824-bzgcy1f1/: run-bzgcy1f1.wandb
wandb/run-20250421_221723-3kxiu8w2/: run-3kxiu8w2.wandb
wandb/run-20250422_012232-qak0c7v0/: run-qak0c7v0.wandb
wandb/run-20250422_012416-30kv8k8t/: run-30kv8k8t.wandb
wandb/run-20250422_015546-873lyeca/: run-873lyeca.wandb
wandb/run-20250422_020815-0b7vyvr6/: run-0b7vyvr6.wandb
wandb/run-20250422_022005-qujrrw2r/: run-qujrrw2r.wandb
wandb/run-20250422_022716-vdjqxqdj/: run-vdjqxqdj.wandb
wandb/run-20250422_023625-e7vctjsy/: run-e7vctjsy.wandb
wandb/run-20250422_030638-vm0xs8mr/: run-vm0xs8mr.wandb
(+2160 files in other folders)
